@@ -33,6 +33,8 @@ import com.jcabi.aspects.Immutable;
 import com.jcabi.aspects.Loggable;
 import java.io.IOException;
 import java.io.InputStream;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import javax.json.JsonObject;
 import javax.xml.bind.DatatypeConverter;
@@ -134,7 +136,11 @@ public interface Content extends Comparable<Content>,
          * @throws IOException If there is any I/O problem
          */
         public URL url() throws IOException {
-            return new URL(this.jsn.text("url"));
+            try {
+                return new URI(this.jsn.text("url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
         /**
          * Get its HTML URL.
@@ -142,7 +148,11 @@ public interface Content extends Comparable<Content>,
          * @throws IOException If there is any I/O problem
          */
         public URL htmlUrl() throws IOException {
-            return new URL(this.jsn.text("html_url"));
+            try {
+                return new URI(this.jsn.text("html_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
         /**
          * Get its GIT URL.
@@ -150,7 +160,11 @@ public interface Content extends Comparable<Content>,
          * @throws IOException If there is any I/O problem
          */
         public URL gitUrl() throws IOException {
-            return new URL(this.jsn.text("git_url"));
+            try {
+                return new URI(this.jsn.text("git_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
         /**
          * Get its encoded content.
