@@ -32,6 +32,8 @@ package com.jcabi.github;
 import com.jcabi.aspects.Immutable;
 import com.jcabi.aspects.Loggable;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import javax.json.JsonObject;
 import lombok.EqualsAndHashCode;
@@ -103,7 +105,11 @@ public interface Fork extends JsonReadable, JsonPatchable {
          * @throws IOException If there is any I/O problem
          */
         public URL url() throws IOException {
-            return new URL(this.jsn.text("url"));
+            try {
+                return new URI(this.jsn.text("url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -130,7 +136,11 @@ public interface Fork extends JsonReadable, JsonPatchable {
          * @throws IOException If there is any I/O problem
          */
         public URL htmlUrl() throws IOException {
-            return new URL(this.jsn.text("html_url"));
+            try {
+                return new URI(this.jsn.text("html_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -139,7 +149,11 @@ public interface Fork extends JsonReadable, JsonPatchable {
          * @throws IOException If there is any I/O problem
          */
         public URL cloneUrl() throws IOException {
-            return new URL(this.jsn.text("clone_url"));
+            try {
+                return new URI(this.jsn.text("clone_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -166,7 +180,11 @@ public interface Fork extends JsonReadable, JsonPatchable {
          * @throws IOException If there is any I/O problem
          */
         public URL svnUrl() throws IOException {
-            return new URL(this.jsn.text("svn_url"));
+            try {
+                return new URI(this.jsn.text("svn_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -184,7 +202,11 @@ public interface Fork extends JsonReadable, JsonPatchable {
          * @throws IOException If there is any I/O problem
          */
         public URL homeUrl() throws IOException {
-            return new URL(this.jsn.text("homepage"));
+            try {
+                return new URI(this.jsn.text("homepage")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
