@@ -32,6 +32,8 @@ package com.jcabi.github;
 import com.jcabi.aspects.Immutable;
 import com.jcabi.aspects.Loggable;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.ParseException;
 import java.util.Date;
@@ -245,7 +247,11 @@ public interface Organization extends Comparable<Organization>,
          * @throws IOException If there is any I/O problem
          */
         public URL url() throws IOException {
-            return new URL(this.jsn.text("url"));
+            try {
+                return new URI(this.jsn.text("url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -254,7 +260,11 @@ public interface Organization extends Comparable<Organization>,
          * @throws IOException If there is any I/O problem
          */
         public URL htmlUrl() throws IOException {
-            return new URL(this.jsn.text("html_url"));
+            try {
+                return new URI(this.jsn.text("html_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -263,7 +273,11 @@ public interface Organization extends Comparable<Organization>,
          * @throws IOException If there is any I/O problem
          */
         public URL avatarUrl() throws IOException {
-            return new URL(this.jsn.text("avatar_url"));
+            try {
+                return new URI(this.jsn.text("avatar_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
