@@ -32,6 +32,8 @@ package com.jcabi.github;
 import com.jcabi.aspects.Immutable;
 import com.jcabi.aspects.Loggable;
 import java.io.IOException;
+import java.net.URI;
+import java.net.URISyntaxException;
 import java.net.URL;
 import java.text.ParseException;
 import java.util.Date;
@@ -160,7 +162,11 @@ public interface User extends JsonReadable, JsonPatchable {
          * @throws IOException If it fails
          */
         public URL avatarUrl() throws IOException {
-            return new URL(this.jsn.text("avatar_url"));
+            try {
+                return new URI(this.jsn.text("avatar_url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
@@ -169,7 +175,11 @@ public interface User extends JsonReadable, JsonPatchable {
          * @throws IOException If it fails
          */
         public URL url() throws IOException {
-            return new URL(this.jsn.text("url"));
+            try {
+                return new URI(this.jsn.text("url")).toURL();
+            } catch (final URISyntaxException ex) {
+                throw new IllegalArgumentException(ex);
+            }
         }
 
         /**
